--- a/style.css
+++ b/style.css
@@ -36,3 +36,124 @@ header{
     align-items: center;
     z-index: 100;
 }
+
+.logo{
+    font-size: 3rem; 
+    color: white; 
+    font-weight: 800; 
+    cursor: pointer; 
+    /* transition: 0.5s ease; */ 
+}
+
+nav a{
+    font-size: 1.8 rem; 
+    color: white; 
+    margin-left:  4rem;
+    font-weight: 500;
+    transition: 0.3s ease;
+    border-bottom: 3px solid transparent;
+
+}
+nav a:hover, 
+nav a:active{
+    color: #7A5A43; 
+    border-bottom: 3px solid #F2ECE5; 
+}
+
+@media(max-width:995px){
+    nav{
+        position:absolute;
+        top:100%; 
+        right:0; 
+        width:40%; 
+        border-left: 3px solid #F2ECE5;
+        border-bottom: 3px solid #F2ECE5;
+        border-bottom-left-radius: 2rem;
+        padding: 1rem solid; 
+        background-color: #7A5A43;
+        border-top: 0.1rem solid #7A5A43; 
+    }
+   nav.active{
+    display: block;
+   }
+   nav a{
+    display: block;
+    font-size: 2rem;
+    margin: 3rem 0; 
+   }
+   nav a:hover, 
+   nav a.active{
+    padding: 1rem; 
+    border-radius: 0.5rem;
+    border-bottom: 0.5rem solid #F2ECE5;
+
+   }
+}
+section{
+    min-height: 100vh;
+    padding: 5rem 9% 5rem;
+}
+
+.home{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 8rem; 
+    background-color: #D6BFAF;
+    
+}
+
+.home .home-content h1{
+    font-size: 6rem; 
+    font-weight: 700;
+    line-height: 1.3;
+}
+
+span{
+    color:#F2ECE5; 
+
+}
+.home-content h3{
+    font-size: 4rem; 
+    margin-bottom: 1rem;
+    font-weight: 700;
+}
+
+.home_img{
+    border-radius:50%; 
+
+}
+.home_img img{
+    position:relative;
+    width: 32vw;
+    border-radius: 50%;
+    box-shadow: 0 0 25px solid #F2ECE5;
+    cursor:pointer;
+    transition: 0.2s linear;
+}
+.home_img img:hover{
+    font-size: 1.8rem;
+    font-weight: 500;
+}
+.social_icons a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 4rem;
+    height: 4rem;
+    background-color: transparent;
+    border:0.2rem solid #F2ECE5;
+    font-size: 2rem;
+    border-radius: 50%;
+    margin: 3rem 1.5rem 3rem 0; 
+    transition: 0.3s ease;
+    color:white;
+}
+
+.social_icons a:hover{
+    color: black; 
+    transform: scale(1.3) translateY(-5px);
+    background-color: #F2ECE5;
+    box-shadow: 0 0 25px #F2ECE5;
+}
+
