--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body{
     width: 100%; 
     height:100vh;
     overflow-x: hidden;
-    background-color: #D6BFAF;
+    background-color: white;
     color: #7A5A43; 
 }
 
@@ -42,7 +42,6 @@ header{
     font-size: 3rem; 
     color: white; 
     font-weight: 800; 
-    cursor: pointer; 
     font-family: "Caprasimo", serif;
     /* transition: 0.5s ease; */ 
 }
@@ -51,10 +50,11 @@ nav{
     justify-content: center;
     align-items: center;
     flex-wrap:wrap;
-    gap: 2rem;
+    background-color: #7A5A43;
+    font-family: "Caprasimo", serif;
 }
 nav a{
-    font-size: 2.8rem; 
+    font-size: 2.0rem; 
     color: white; 
     margin-left:  4rem;
     font-weight: 500;
@@ -73,10 +73,10 @@ nav a:active{
       position: fixed; /* Fix it at the top */
       top: 0;
       left: 0;
+      justify-content: center;
       width: 100%;
       background-color: #7A5A43;
       display: flex;
-      flex-direction: column;
       align-items: center;
       border-bottom: 3px solid #F2ECE5;
       z-index: 1000;
@@ -162,6 +162,7 @@ span{
     margin: 3rem 1.5rem 3rem 0; 
     transition: 0.3s ease;
     color:white;
+    size: 1.8rem; 
 }
 
 .social_icons a:hover{
