--- a/styles.css
+++ b/styles.css
@@ -35,7 +35,7 @@ header{
     display: flex;
     justify-content:  space-between;
     align-items: center;
-    z-index: 100;
+    z-index: 1000;
 }
 
 .logo{
@@ -50,8 +50,10 @@ nav{
     justify-content: center;
     align-items: center;
     flex-wrap:wrap;
-    background-color: #7A5A43;
     font-family: "Caprasimo", serif;
+}
+.header_bar{
+    background-color: #7A5A43;;
 }
 nav a{
     font-size: 2.0rem; 
@@ -60,6 +62,7 @@ nav a{
     font-weight: 500;
     transition: 0.3s ease;
     border-bottom: 3px solid transparent;
+    font-family: "Caprasimo", serif;
 
 }
 nav a:hover, 
@@ -82,6 +85,7 @@ nav a:active{
       z-index: 1000;
       padding: 1rem 0;
       display: none; /* Hide by default */
+      font-family: "Caprasimo", serif;
     }
   
     nav.active {
