--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,9 @@ nav{
     font-family: "Caprasimo", serif;
 }
 .header_bar{
-    background-color: #7A5A43;;
+    background-color: #7A5A43;
+    width: 25%;
+
 }
 nav a{
     font-size: 2.0rem; 
@@ -126,6 +128,7 @@ section{
     font-size: 6rem; 
     font-weight: 700;
     line-height: 1.3;
+    color: #F2ECE5;
 }
 
 span{
@@ -146,7 +149,6 @@ span{
     width: 32vw;
     border-radius: 50%;
     box-shadow: 0 0 25px solid #F2ECE5;
-    cursor:pointer;
     transition: 0.2s linear;
 }
 .home_img img:hover{
