--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@ body{
     height:100vh;
     overflow-x: hidden;
     background-color: white;
-    color: #7A5A43; 
+    /* color: #7A5A43;  */
 }
 
 header{
