--- a/styles.css
+++ b/styles.css
@@ -87,10 +87,11 @@ nav a:active{
       border-bottom: 3px solid #F2ECE5;
       z-index: 1000;
       padding: 1rem 0;
-      display: none; /* Hide by default */
       font-family: "Caprasimo", serif;
     }
-  
+    .logo{
+        font-size: 2.5rem;
+    }
     nav.active {
       display: flex; /* Show when active */
     }
@@ -126,7 +127,7 @@ section{
 }
 
 .home .home-content h1{
-    font-size: 6rem; 
+    font-size: 3rem; 
     font-weight: 700;
     line-height: 1.3;
     color: #F2ECE5;
@@ -137,7 +138,7 @@ span{
 
 }
 .home-content h3{
-    font-size: 4rem; 
+    font-size: 2rem; 
     margin-bottom: 1rem;
     font-weight: 700;
     color: #F2ECE5;
@@ -148,7 +149,7 @@ span{
 }
 .home_img img{
     position:relative;
-    width: 32vw;
+    width: 40vw;
     border-radius: 50%;
     box-shadow: 0 0 25px solid #F2ECE5;
     transition: 0.2s linear;
@@ -170,7 +171,7 @@ span{
     margin: 3rem 1.5rem 3rem 0; 
     transition: 0.3s ease;
     color:white;
-    size: 1.8rem; 
+    size:2.0rem; 
 }
 
 .social_icons a:hover{
