--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,11 @@ nav a:active{
 }
 
 @media (max-width: 995px) {
+    .header_bar{
+        padding: 1rem 0;
+        flex-direction: column;
+        gap: 1rem;
+    }
     nav {
       position: fixed; /* Fix it at the top */
       top: 0;
@@ -86,7 +91,7 @@ nav a:active{
       align-items: center;
       border-bottom: 3px solid #F2ECE5;
       z-index: 1000;
-      padding: 1rem 0;
+      padding: 0 1rem ;
       font-family: "Caprasimo", serif;
       gap: 2rem;
     }
@@ -128,7 +133,7 @@ section{
 }
 
 .home .home-content h1{
-    font-size: 3rem; 
+    font-size: 5rem; 
     font-weight: 700;
     line-height: 1.3;
     color: #F2ECE5;
@@ -139,7 +144,7 @@ span{
 
 }
 .home-content h3{
-    font-size: 2rem; 
+    font-size: 4rem; 
     margin-bottom: 1rem;
     font-weight: 700;
     color: #F2ECE5;
