--- a/styles.css
+++ b/styles.css
@@ -218,10 +218,10 @@ span{
 }
 
 @keyframes typing {
-    0%, 10%, 15%, 20%, 30%, 35%, 40%, 50%, 55%, 60%, 70%, 75%, 80%, 90%, 95%, 100% {
+    0%, 20%, 30%, 40%, 50%, 60%, 70%, 75%, 80%, 90%, 95%, 100% {
         width: 0;
     }
-    5%, 25%, 45%, 65%, 85% {
+    10%, 25%, 35%, 45%, 55% {
         width: calc(100% + 8px);
     }
 }
