--- a/styles.css
+++ b/styles.css
@@ -218,14 +218,43 @@ span{
 }
 
 @keyframes typing {
-    0%, 20%, 30%, 40%, 50%, 60%, 70%, 75%, 80%, 90%, 95%, 100% {
+    /* Backend Developer: 0-20% */
+    0%, 19% {
+        width: calc(100% + 8px);
+    }
+    20% {
         width: 0;
     }
-    10%, 25%, 35%, 45%, 55% {
+    
+    /* Software Developer: 21-40% */
+    21%, 39% {
+        width: calc(100% + 8px);
+    }
+    40% {
+        width: 0;
+    }
+    
+    /* Researcher: 41-60% */
+    41%, 59% {
+        width: calc(100% + 8px);
+    }
+    60% {
+        width: 0;
+    }
+    
+    /* Jetsetter: 61-80% */
+    61%, 79% {
+        width: calc(100% + 8px);
+    }
+    80% {
+        width: 0;
+    }
+    
+    /* Content Creator: 81-100% */
+    81%, 100% {
         width: calc(100% + 8px);
     }
 }
-
 @keyframes cursor{
     to{
         border-left: 3px solid;
