--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ nav a:active{
       position: fixed; /* Fix it at the top */
       top: 0;
       left: 0;
-      justify-content: center;
+      justify-content: left;
       width: 100%;
       background-color: #7A5A43;
       display: flex;
@@ -200,81 +200,6 @@ span{
 
 }
 
-.typing_text span::before{
-    content: "";
+.typed_word{
     color:#7A5A43; 
-    animation: words 20s infinite;   
-}
-
-.typing_text span::after{
-    content: "";
-    /* background-color: #7A5A43; */
-    position:absolute; 
-    width: calc(100% + 8px);
-    height: 100%; 
-    border-left: 3px solid black; 
-    right: -8px; 
-    animation: cursor 0.6s infinite, typing 20s infinite;
-}
-
-@keyframes typing {
-    /* Backend Developer: 0-20% */
-    0%, 19% {
-        width: calc(100% + 8px);
-    }
-    20% {
-        width: 0;
-    }
-    
-    /* Software Developer: 21-40% */
-    21%, 39% {
-        width: calc(100% + 8px);
-    }
-    40% {
-        width: 0;
-    }
-    
-    /* Researcher: 41-60% */
-    41%, 59% {
-        width: calc(100% + 8px);
-    }
-    60% {
-        width: 0;
-    }
-    
-    /* Jetsetter: 61-80% */
-    61%, 79% {
-        width: calc(100% + 8px);
-    }
-    80% {
-        width: 0;
-    }
-    
-    /* Content Creator: 81-100% */
-    81%, 100% {
-        width: calc(100% + 8px);
-    }
-}
-@keyframes cursor{
-    to{
-        border-left: 3px solid;
-    }
-}
-
-@keyframes words{
-    0%, 20%{
-        content: "Backend Developer";
-    }
-    21%, 40%{
-        content: "Software Developer"
-    }
-    41%, 60%{
-        content: "Researcher";
-    }
-    60%, 80%{
-        content: "Jetsetter"
-    }
-    81%, 100%{
-        content: "Content Creator"
-    }
 }
