--- a/styles.css
+++ b/styles.css
@@ -46,16 +46,17 @@ header{
 }
 nav{
     display: flex; 
-    justify-content: center;
-    align-items: center;
     flex-wrap:wrap;
     font-family: "Caprasimo", serif;
+    position: fixed; 
+    float: right; 
 }
 .header_bar{
     background-color: #7A5A43;
     height: 5%;
     padding-top:0;
     width: 100%; 
+    /* align-items: center; */
 
 }
 nav a{
@@ -84,7 +85,7 @@ nav a:active{
       position: fixed; /* Fix it at the top */
       top: 0;
       left: 0;
-      justify-content: left;
+      justify-content: center;
       width: 100%;
       background-color: #7A5A43;
       display: flex;
@@ -93,10 +94,12 @@ nav a:active{
       padding: 0 1rem ;
       font-family: "Caprasimo", serif;
       gap: 2rem;
+      position: fixed;
     }
-    /* .logo{
+    .logo{
         font-size: 2.5rem;
-    } */
+        justify-content: left;
+    } 
     nav.active {
       display: flex; /* Show when active */
     }
@@ -181,7 +184,7 @@ span{
 }
 
 .social_icons a:hover{
-    color: black; 
+    color: #7A5A43; 
     transform: scale(1.3) translateY(-5px);
     background-color: #F2ECE5;
     box-shadow: 0 0 25px #F2ECE5;
