--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@ nav{
     font-family: "Caprasimo", serif;
     position: fixed; 
     float: right; 
+    justify-content: center;
 }
 .header_bar{
     background-color: #7A5A43;
@@ -98,7 +99,8 @@ nav a:active{
     }
     .logo{
         font-size: 2.5rem;
-        justify-content: left;
+        float: left;
+        padding-left: 10px;
     } 
     nav.active {
       display: flex; /* Show when active */
